<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <EditText
        android:id="@+id/city_name"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:hint="@string/city_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/show_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/show_result"
        app:layout_constraintBottom_toTopOf="@id/tempInC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

    <TextView
        android:id="@+id/tempC"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/temp_in_c"
        app:layout_constraintEnd_toStartOf="@+id/tempInC"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintLeft_toRightOf="@id/tempInC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_result" />

    <TextView
        android:id="@+id/tempInC"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/tempInF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tempC"
        app:layout_constraintTop_toBottomOf="@id/show_result" />


    <TextView
        android:id="@+id/tempF"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/temp_in_f"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tempInF"
        app:layout_constraintTop_toBottomOf="@id/tempC" />

    <TextView
        android:id="@+id/tempInF"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/longitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tempF"
        app:layout_constraintTop_toBottomOf="@id/tempInC" />

    <TextView
        android:id="@+id/longitudeText"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/longitude"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/longitude"
        app:layout_constraintTop_toBottomOf="@id/tempF" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/longitudeText"
        app:layout_constraintTop_toBottomOf="@id/tempInF" />

    <TextView
        android:id="@+id/latitudeText"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/latitude"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintRight_toLeftOf="@+id/latitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitudeText" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/latitudeText"
        app:layout_constraintTop_toBottomOf="@id/longitude" />


</androidx.constraintlayout.widget.ConstraintLayout>